syntax = "proto3";

package calculatepb;

option go_package = "calculate/calculatepb";

message SumRequest {
    int32 num1 = 1;
    int32 num2 = 2;
}

message SumResponse{
    int32 sum = 1;
}

message SquareRootRequest{
    double num = 1;
}

message SquareRootResponse{
    double root_num = 1;
}

service CalculatorService {
    rpc Sum (SumRequest) returns (SumResponse);
    
    //throws an invalid argument error for input values smaller than 0
    rpc SquareRoot (SquareRootRequest) returns (SquareRootResponse);
}